--- a/Admin/Admin/Admin.csproj
+++ b/Admin/Admin/Admin.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Professor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLOperations.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
