--- a/Admin/Admin/Admin.csproj
+++ b/Admin/Admin/Admin.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Course.cs" />
     <Compile Include="DatabaseConnections.cs" />
+    <Compile Include="DateTimeOperations.cs" />
     <Compile Include="Professor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
