--- a/Admin/Admin/Admin.csproj
+++ b/Admin/Admin/Admin.csproj
@@ -50,6 +50,7 @@
     <Compile Include="PromptInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLOperations.cs" />
+    <Compile Include="Student.cs" />
     <Compile Include="UIOperations.cs" />
   </ItemGroup>
   <ItemGroup>
