--- a/Admin/Admin/Admin.csproj
+++ b/Admin/Admin/Admin.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLOperations.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="UICreateOps.cs" />
     <Compile Include="UIOperations.cs" />
   </ItemGroup>
   <ItemGroup>
