--- a/Student/StudentApp/StudentApp/StudentApp.csproj
+++ b/Student/StudentApp/StudentApp/StudentApp.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Course.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLOperations.cs" />
     <Compile Include="StudentUI.cs" />
   </ItemGroup>
   <ItemGroup>
