--- a/Student/StudentApp/StudentApp/StudentApp.csproj
+++ b/Student/StudentApp/StudentApp/StudentApp.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Course.cs" />
+    <Compile Include="DatabaseConnections.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLOperations.cs" />
